versions/v1.3/modules/en/pages/virtual-machines/virtual-machines.adoc
= Virtual Machines

You can create xref:../virtual-machines/create-vm.adoc[Linux virtual machines] using one of the following methods: 

* {harvester-product-name} UI: On the *Virtual Machines* screen, click *Create* and configure the settings on each tab. 
* Kubernetes API: Create a `VirtualMachine` object. 
* xref:../integrations/terraform/terraform-provider.adoc[Harvester Terraform Provider]: Define a `harvester_virtualmachine` resource block. 

Creating xref:../virtual-machines/create-windows-vm.adoc[Windows virtual machines] on the UI involves slightly different steps. {harvester-product-name} provides a virtual machine template named `windows-iso-image-base-template` that adds a volume with the Virtio drivers for Windows, which streamlines the configuration process. If you require Virtio devices but choose to not use the template, you must add your own Virtio drivers for Windows to enable correct hardware detection. 

== Supported Guest Operating Systems

The following operating systems have been validated to run in {harvester-product-name} virtual machines:

|===
| Operating System | v1.3.0 | v1.3.1 | v1.3.2

| openSUSE Leap
| 15.4
| 15.4
| 15.5

| SUSE Linux Enterprise Micro
| N/A
| N/A
| 6

| SUSE Linux Enterprise Server
| 15 SP4, 15 SP5
| 15 SP4, 15 SP5
| 15 SP6

| Red Hat Enterprise Linux
| N/A
| N/A
| 9.4

| Ubuntu
| 22.04, 23.04
| 22.04, 23.04
| 24.04

| Windows
| 11
| 11
| 11

| Windows Server
| 2022
| 2022
| 2022
|===

[NOTE]
====
The list includes only tested operating systems and is not intended to be exhaustive. Other operating systems may also run in {harvester-product-name} virtual machines. However, guest operating systems must match the architecture of the {harvester-product-name} cluster's hosts. AMD virtual machines can run only on AMD clusters, and ARM virtual machines can run only on ARM clusters.

You are responsible for obtaining, activating, and managing licenses for any commercial software that you decide to use. {harvester-product-name} cannot be held responsible for damage or loss of data that may occur through the use of untested, unpatched, and outdated operating systems.

The contents of this document may not reflect the most current situation and may change at any time without notice.
====