versions/v1.8/modules/en/pages/virtual-machines/virtual-machines.adoc
= Virtual Machines
:revdate: 2026-09-09
:page-revdate: {revdate}

You can create xref:../virtual-machines/create-vm.adoc[Linux virtual machines] using one of the following methods: 

* {harvester-product-name} UI: On the *Virtual Machines* screen, click *Create* and configure the settings on each tab. 
* Kubernetes API: Create a `VirtualMachine` object. 
* xref:../integrations/terraform/terraform-provider.adoc[Harvester Terraform Provider]: Define a `harvester_virtualmachine` resource block. 

Creating xref:../virtual-machines/create-windows-vm.adoc[Windows virtual machines] on the UI involves slightly different steps. {harvester-product-name} provides a virtual machine template named `windows-iso-image-base-template` that adds a volume with the Virtio drivers for Windows, which streamlines the configuration process. If you require Virtio devices but choose to not use the template, you must add your own Virtio drivers for Windows to enable correct hardware detection.

== Guest Operating Systems

{harvester-product-name} is designed to run a broad range of modern operating systems as virtual machine guests. SUSE supports virtual machines running operating systems that meet the following criteria:

* Are supported by their respective vendors.
* Are designed for x86_64 or ARM64 architectures.
* Use standard virtualization interfaces and drivers supported by {harvester-product-name}. This includes standard VirtIO devices (such as virtio-net, virtio-blk, virtio-scsi, and virtio-balloon), standard ACPI interfaces, and default hypervisor guest agent interactions provided or validated by {harvester-product-name}.

If a supported guest operating system encounters an issue running as a virtual machine, SUSE Support will investigate the problem and provide assistance within the scope of {harvester-product-name}. Applications and workloads running inside the guest operating system are eligible for support provided the underlying guest operating system itself is fully supported. However, issues originating within the guest operating system layer or higher-level application code may require direct engagement with the respective vendor.

Operating systems that have reached End of Life (EOL) with their vendor are not supported by SUSE.

The {harvester-product-name} team validates two minor releases of a given operating system on a rolling basis. For more information, see the https://www.suse.com/support/policy-products/#cloud-native[Cloud Native Support Policy].

=== Validated Guest Operating Systems

The following operating systems have been validated to run in {harvester-product-name} virtual machines:

* SUSE Linux Enterprise Micro 6.1 and 6.2
* SUSE Linux Enterprise Server 15 SP7 and 16
* Red Hat Enterprise Linux 9 and 10
* Ubuntu 22.04 and 24.04
* Windows 11
* Windows Server 2025

[NOTE]
====
The list includes only tested operating systems and is not intended to be exhaustive. Other operating systems may also run in {harvester-product-name} virtual machines. However, guest operating systems must match the architecture of the {harvester-product-name} cluster's hosts. AMD virtual machines can run only on AMD clusters, and ARM virtual machines can run only on ARM clusters.

You are responsible for obtaining, activating, and managing licenses for any commercial software that you decide to use. {harvester-product-name} cannot be held responsible for damage or loss of data that may occur through the use of untested, unpatched, and outdated operating systems.

The contents of this document may not reflect the most current situation and may change at any time without notice.
====